<resources>
    <string name="app_name">Yandex Open Lecture - Homework</string>
    <string name="saveButtonText">СОХРАНИТЬ</string>
    <string name="todoTextHint">Что надо сделать...</string>
    <string name="importantText">Важность</string>
    <string name="importantTextChooseNo">Нет</string>
    <string name="whenText">Сделать до</string>
    <string name="deleteText">Удалить</string>

    <string name="someTodoText">Тот редкий случай, когда в Kotlin ключевое слово enum используется до ключевого слова class. В Kotlin enum относится к разряду мягких ключевых слов (soft keyword), которое является ключевым только перед ключевым словом class. В других случаях вы можете использовать его свободно как простое имя переменной.</string>
    <string name="headerText">Мои дела</string>
    <string name="completedText">Выполнено — </string>
</resources>