<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yandex_hwork.screens.TodoItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/closeAndSaveGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="15dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saveButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveButtonText"
            android:textColor="@drawable/custom_save_text_color"
            android:textStyle="bold"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollTodo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeAndSaveGroup">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/todoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:autofillHints="username"
            android:background="@drawable/custom_input"
            android:elevation="4dp"
            android:gravity="top"
            android:hint="@string/todoTextHint"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            android:padding="15dp"
            android:textColor="@color/label_primary"
            android:textColorHint="@color/label_secondary"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/todoText">

        <TextView
            android:id="@+id/importantText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/importantText"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/importantChooseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/importantTextChooseNo"
            android:textColor="@color/label_tertiary"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/importantText" />

        <View
            android:id="@+id/firstDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="@color/support_separator"
            app:layout_constraintTop_toBottomOf="@+id/importantChooseText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/firstDivider">

            <TextView
                android:id="@+id/whenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whenText"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_blue"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whenText" />

            <Switch
                android:id="@+id/dateSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

        <View
        android:id="@+id/secondDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/support_separator"
        app:layout_constraintTop_toBottomOf="@+id/infoViewGroup" />

        <TextView
            android:id="@+id/deleteButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:textSize="17sp"
            android:textColor="@drawable/custom_delete_text_color"
            android:text="@string/deleteText"
            app:drawableStartCompat="@drawable/custom_delete_icon"
            android:drawablePadding="15dp"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondDivider"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>